--- a/template/package.json
+++ b/template/package.json
@@ -6,7 +6,8 @@
 	"main": "index.js",
 	"license": "BSD-3-Clause",
 	"scripts": {
-		"dev": "vite"
+		"dev": "vite",
+		"build": "tailwindcss -i ./src/styles.css -o ./css/styles.css"
 	},
 	"dependencies": {
 		"autoprefixer": "^10.3.0",
